command line execution of main function